# codlinux

./: Cargo.toml  README.md
.github/workflows/: rust.yml  testing.yml
docker/: Dockerfile  README.md
src/: main.rs  screenshooter.rs  updater.rs  util.rs  utils.rs
