[package]
name = "codlinux"
version = "1.0.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.41", features = ["serde", "clock"] }
compile-time = "0.2.0"
futures-util = "0.3.31"
gtk4 = { version = "0.9.7", features = ["v4_14"] }
md5 = "0.8.0"
relm4 = "0.9.1"
relm4-components = "0.9.1"
relm4-macros = "0.9.1"
reqwest = { version = "0.12.20", features = ["stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
